Fixing dark mode styles (removes homepage background image, cleaning up nav link wrwapping)

--- a/src/components/Layout/root.scss
+++ b/src/components/Layout/root.scss
@@ -1,6 +1,6 @@
 :root {
   --font-family-content: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  --font-family-header: "Lora", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  --font-family-header: "Cinzel", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
   --max-width-content: 1440px;
   --spacing-unit: 1rem;
