--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -157,9 +157,13 @@
   bottom: 0;
   z-index: -1;
 
-  @media(min-width: 1440px) {
+  @media (min-width: 1440px) {
     bottom: auto;
     top: 0;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    display: none;
   }
 }
 
